test/files/pos/t911.scala
object Test {
  def foo: Any = {
    case class Foo() {}
    Foo;
  }
}
